--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <img src="images/about_1.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
-            <h2 class="text-black mb-4">Create interactive prototypes</h2>
+            <h2 class="text-black mb-4">Meet The Team</h2>
             <p class="mb-4">Eos cumque optio dolores excepturi rerum temporibus magni recusandae eveniet, totam omnis consectetur maxime quibusdam expedita dolorem dolor nobis dicta labore quaerat esse magnam unde, aperiam delectus! At maiores, itaque.</p>
             <p><a href="#" class="btn btn-primary">Learn More</a></p>
           </div>
