Updated team description

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
             <h2 class="text-black mb-4">Meet The Team</h2>
-            <p class="mb-4">Eos cumque optio dolores excepturi rerum temporibus magni recusandae eveniet, totam omnis consectetur maxime quibusdam expedita dolorem dolor nobis dicta labore quaerat esse magnam unde, aperiam delectus! At maiores, itaque.</p>
+            <p class="mb-4">We are a group of 4th year mechatronics students at the University of Waterloo. We have a wide range of industry experience in fields such as manufacturing and automation, software for augmented reality, and embedded software. </p>
             <p><a href="#" class="btn btn-primary">Learn More</a></p>
           </div>
         </div>
