I really hope yall like inline formatting

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-none d-lg-block">
       <div class="row">
         <div class="col-12 text-center mb-4 mt-5">
-            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0">TrackPod<span class="text-primary">.</span> </a></h1>
+            <h1 class="mb-0 site-logo"><a href="index.html" class="text-black h2 mb-0" style="font-size: 65px!important;">TrackPod<span class="text-primary">.</span> </a></h1>
           </div>
       </div>
     </div>
@@ -61,9 +61,9 @@
               <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
                 <li><a href="#home-section" class="nav-link">Home</a></li>
                 <li><a href="#features-section" class="nav-link">Features</a></li>
-                <li><a href="#about-section" class="nav-link">About Us</a></li>
-                <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-                <li><a href="#blog-section" class="nav-link">Blog</a></li>
+                <li><a href="#about-section" class="nav-link">Team</a></li>
+                <li hidden><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
+                <li><a href="#blog-section" class="nav-link">Project Updates</a></li>
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
               </ul>
             </nav>
@@ -89,9 +89,9 @@
             <div class="row mb-4">
               <div class="col-lg-4 mr-auto">
                 <h1>Automated Target Tracking</h1>
-                <p class="mb-5">This TriPod is gonna shake up ur life.</p>
+                <p class="mb-5" style="font-size: 33px !important;">Self-Centering TriPod</p>
                 <div>
-                  <a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a>
+                  <a href="#features-section" class="nav-link btn btn-primary mr-2 mb-2">Learn More</a>
                 </div>
               </div>
 
@@ -471,9 +471,10 @@
         <div class="row">
           <div class="col-md-12">
             <p class="mb-0">
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+
+              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
               Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
-              <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+              Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             </p>
           </div>
         </div>
