--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/icomoon.css">
 
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
 
@@ -276,6 +277,98 @@
         </div>
 
       </div>
+
+      <section class="ftco-section" style="margin-top: 150px !important;">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated">
+            <div class="staff">
+              <div class="img-wrap d-flex align-items-stretch">
+                <div class="img align-self-stretch" style="background-image: url(images/staff-1.jpg);"></div>
+              </div>
+              <div class="text d-flex align-items-center pt-3 text-center">
+                <div>
+                  <h3 class="mb-2">Lloyd Wilson</h3>
+                  <span class="position mb-4">CEO, Founder</span>
+                  <div class="faded">
+                    <ul class="ftco-social text-center">
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated">
+            <div class="staff">
+              <div class="img-wrap d-flex align-items-stretch">
+                <div class="img align-self-stretch" style="background-image: url(images/staff-2.jpg);"></div>
+              </div>
+              <div class="text d-flex align-items-center pt-3 text-center">
+                <div>
+                  <h3 class="mb-2">Rachel Parker</h3>
+                  <span class="position mb-4">Web Designer</span>
+                  <div class="faded">
+                    <ul class="ftco-social text-center">
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated">
+            <div class="staff">
+              <div class="img-wrap d-flex align-items-stretch">
+                <div class="img align-self-stretch" style="background-image: url(images/staff-3.jpg);"></div>
+              </div>
+              <div class="text d-flex align-items-center pt-3 text-center">
+                <div>
+                  <h3 class="mb-2">Ian Smith</h3>
+                  <span class="position mb-4">Web Developer</span>
+                  <div class="faded">
+                    <ul class="ftco-social text-center">
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated">
+            <div class="staff">
+              <div class="img-wrap d-flex align-items-stretch">
+                <div class="img align-self-stretch" style="background-image: url(images/staff-4.jpg);"></div>
+              </div>
+              <div class="text d-flex align-items-center pt-3 text-center">
+                <div>
+                  <h3 class="mb-2">Alicia Henderson</h3>
+                  <span class="position mb-4">Graphic Designer</span>
+                  <div class="faded">
+                    <ul class="ftco-social text-center">
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+</section>
+    
     </div>
 
 
