--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     </div>
 
 
-    <div class="site-section testimonial-wrap" id="testimonials-section">
+    <div class="site-section testimonial-wrap" id="testimonials-section" hidden>
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
