updated names of people in team, also just testing out git

--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@
               </div>
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
-                  <h3 class="mb-2">Lloyd Wilson</h3>
-                  <span class="position mb-4">CEO, Founder</span>
+                  <h3 class="mb-2">Devansh Vaid</h3>
+                  <span class="position mb-4">Embedded Systems Designer</span>
                   <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -309,8 +309,8 @@
               </div>
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
-                  <h3 class="mb-2">Rachel Parker</h3>
-                  <span class="position mb-4">Web Designer</span>
+                  <h3 class="mb-2">Fernando Yee</h3>
+                  <span class="position mb-4">Electromechanical Designer</span>
                   <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -330,8 +330,8 @@
               </div>
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
-                  <h3 class="mb-2">Ian Smith</h3>
-                  <span class="position mb-4">Web Developer</span>
+                  <h3 class="mb-2">Julian Pettit</h3>
+                  <span class="position mb-4">AI/ML and CV developer</span>
                   <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
@@ -351,8 +351,8 @@
               </div>
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
-                  <h3 class="mb-2">Alicia Henderson</h3>
-                  <span class="position mb-4">Graphic Designer</span>
+                  <h3 class="mb-2">William Klanac</h3>
+                  <span class="position mb-4">Mechanical Designer</span>
                   <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
