--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
           <div class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated">
             <div class="staff">
               <div class="img-wrap d-flex align-items-stretch">
-                <div class="img align-self-stretch" style="background-image: url(images/staff-2.jpg);"></div>
+                <div class="img align-self-stretch" style="background-image: url(images/fernando_headshot.png);"></div>
               </div>
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
