--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
           <div class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated">
             <div class="staff">
               <div class="img-wrap d-flex align-items-stretch">
-                <div class="img align-self-stretch" style="background-image: url(images/staff-3.jpg);"></div>
+                <div class="img align-self-stretch" style="background-image: url(images/julian.jpg);"></div>
               </div>
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
@@ -352,7 +352,7 @@
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
                   <h3 class="mb-2">William Klanac</h3>
-                  <span class="position mb-4">Mechanical Designer</span>
+                  <span class="position mb-4" style="height: 54px;">Mechanical Designer</span>
                   <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
