--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
-                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
                   </div>
@@ -315,7 +315,7 @@
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
-                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
                   </div>
@@ -336,7 +336,7 @@
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
-                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
                   </div>
@@ -347,7 +347,7 @@
           <div class="col-md-6 col-lg-3 ftco-animate fadeInUp ftco-animated">
             <div class="staff">
               <div class="img-wrap d-flex align-items-stretch">
-                <div class="img align-self-stretch" style="background-image: url(images/staff-4.jpg);"></div>
+                <div class="img align-self-stretch" style="background-image: url(images/will.jpg);"></div>
               </div>
               <div class="text d-flex align-items-center pt-3 text-center">
                 <div>
@@ -357,7 +357,7 @@
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
-                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-google-plus"></span></a></li>
+                      <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
                   </div>
