added trackpod features text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h2 class="section-title mb-3">Features</h2>
+            <h2 class="section-title mb-3">Features of the TrackPod</h2>
           </div>
         </div>
         <div class="row align-items-stretch">
@@ -120,9 +120,9 @@
                 <span class="icon-wrap"><span class="text-primary icon-autorenew"></span></span>
               </div>
               <div>
-                <h3>Business Consulting</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Target Selection</h3>
+                <p>The TrackPod can center up to 3 targets in the camera frame to ensure everyone is the center of attention.</p>
+<!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
 
@@ -134,9 +134,9 @@
                 <span class="icon-wrap"><span class="text-primary icon-store_mall_directory"></span></span>
               </div>
               <div>
-                <h3>Market Analysis</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Portable</h3>
+                <p>The TrackPod is battery powered and lightweight so you can snap photos on the go.</p>
+<!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
           </div>
@@ -146,9 +146,9 @@
                 <span class="icon-wrap"><span class="text-primary icon-shopping_basket"></span></span>
               </div>
               <div>
-                <h3>User Monitoring</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Dual-Axis Motion</h3>
+                <p>The TrackPod uses a yaw and pitch motor for positioning so it can track any target in any position.</p>
+<!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
           </div>
@@ -160,26 +160,24 @@
                 <span class="icon-wrap"><span class="text-primary icon-settings_backup_restore"></span></span>
               </div>
               <div>
-                <h3>Insurance Consulting</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Wireless Connectivity</h3>
+                <p>TrackPod completely eliminates the need of communication cables by using wireless methods instead.</p>
+<!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
           </div>
 
-          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
+           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
             <div class="unit-4 d-block">
               <div class="unit-4-icon mb-3">
                 <span class="icon-wrap"><span class="text-primary icon-sentiment_satisfied"></span></span>
               </div>
               <div>
-                <h3>Customer Satistified</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Low Entry Price</h3>
+                <p>The TrackPod starts at $600 which easily undercuts other products which start at nearly $900.</p>
+<!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
-
-
           </div>
 
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4" data-aos="fade-up">
@@ -188,9 +186,9 @@
                 <span class="icon-wrap"><span class="text-primary icon-power"></span></span>
               </div>
               <div>
-                <h3>Plug &amp; Play</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quis molestiae vitae eligendi at.</p>
-                <p><a href="#">Learn More</a></p>
+                <h3>Universal Phone Mount</h3>
+                <p>The TrackPod uses a universal phone mount so you and your friends can share the TrackPod without needing adapters or dongles.</p>
+<!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
           </div>
@@ -206,11 +204,11 @@
             <img src="images/do_ui_kit_download_cta_floating_devices-2x.png" alt="Image" class="img-fluid">
           </div>
           <div class="col-lg-5 pl-lg-5 ml-auto mt-md-5">
-            <h2 class="text-black">Create interactive prototypes</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam.</p>
+            <h2 class="text-black">Intuitive User Interface</h2>
+            <p class="mb-4">A well designed interface means more time taking photos and less time reading documentation.</p>
             <ul class="ul-check mb-5 list-unstyled success">
-              <li>Adipisci excepturi aliquam</li>
-              <li>Deleniti labore reiciendis</li>
+              <li>Cognitive ergonomically designed</li>
+              <li>Modern day styles to match this world</li>
             </ul>
             <div class="author-box">
               <div class="d-flex mb-4">
@@ -218,11 +216,11 @@
                   <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle">
                 </div>
                 <div class="mr-auto text-black">
-                  <strong class="font-weight-bold mb-0">Amalia G.</strong> <br>
-                  Co-Founder, XYZ Inc.
+                  <strong class="font-weight-bold mb-0">Amaliareeeeee G.</strong> <br>
+                  Someone who takes photos.
                 </div>
               </div>
-              <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores inventore aperiam iure?&rdquo;</blockquote>
+              <blockquote>&ldquo;I love using my TrackPod for taking photos of me and my alpacas. The quick and accurate tracking ensures that I get the perfect photo everytime before my alpacas run away.&rdquo;</blockquote>
             </div>
           </div>
         </div>
