modify feature descriptions

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                 <span class="icon-wrap"><span class="text-primary icon-store_mall_directory"></span></span>
               </div>
               <div>
-                <h3>Portable</h3>
+                <h3>Portability</h3>
                 <p>The TrackPod is battery powered and lightweight so you can snap photos on the go.</p>
 <!--                <p><a href="#">Learn More</a></p> -->
               </div>
@@ -147,7 +147,7 @@
               </div>
               <div>
                 <h3>Dual-Axis Motion</h3>
-                <p>The TrackPod uses a yaw and pitch motor for positioning so it can track any target in any position.</p>
+                <p>The TrackPod uses a dual motor system to track targets vertically and horizontally.</p>
 <!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
@@ -161,7 +161,7 @@
               </div>
               <div>
                 <h3>Wireless Connectivity</h3>
-                <p>TrackPod completely eliminates the need of communication cables by using wireless methods instead.</p>
+                <p>TrackPod uses wireless connectivity to eliminate the need for cables.</p>
 <!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
@@ -174,7 +174,7 @@
               </div>
               <div>
                 <h3>Low Entry Price</h3>
-                <p>The TrackPod starts at $600 which easily undercuts other products which start at nearly $900.</p>
+                <p>The TrackPod starts at $600 CAD, nearly $300 cheaper than competing products on the market.</p>
 <!--                <p><a href="#">Learn More</a></p> -->
               </div>
             </div>
@@ -366,7 +366,7 @@
         </div>
       </div>
 </section>
-    
+
     </div>
 
 
