update ui description

--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
             <h2 class="text-black">Intuitive User Interface</h2>
             <p class="mb-4">A well designed interface means more time taking photos and less time reading documentation.</p>
             <ul class="ul-check mb-5 list-unstyled success">
-              <li>Cognitive ergonomically designed</li>
-              <li>Modern day styles to match this world</li>
+              <li>Designed with the user in mind using principles of cognitive ergonomics.</li>
+              <li>Sleek and streamlined look constructed with high quality materials.</li>
             </ul>
             <div class="author-box">
               <div class="d-flex mb-4">
@@ -216,39 +216,11 @@
                   <img src="images/person_1.jpg" alt="Image" class="img-fluid rounded-circle">
                 </div>
                 <div class="mr-auto text-black">
-                  <strong class="font-weight-bold mb-0">Amaliareeeeee G.</strong> <br>
-                  Someone who takes photos.
+                  <strong class="font-weight-bold mb-0">James G.</strong> <br>
+                  Amateur Photographer
                 </div>
               </div>
-              <blockquote>&ldquo;I love using my TrackPod for taking photos of me and my alpacas. The quick and accurate tracking ensures that I get the perfect photo everytime before my alpacas run away.&rdquo;</blockquote>
-            </div>
-          </div>
-        </div>
-
-        <div class="mt-5 row mb-5 site-section ">
-          <div class="col-lg-7 order-1 order-lg-2">
-            <img src="images/do_ui_kit_hero_floating_devices-2x.png" alt="Image" class="img-fluid">
-          </div>
-          <div class="col-lg-5 pr-lg-5 mr-auto mt-5 order-2 order-lg-1">
-            <h2 class="text-black">Create interactive prototypes</h2>
-            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem neque nisi architecto autem molestias corrupti officia veniam</p>
-            <ul class="ul-check mb-5 list-unstyled success">
-              <li>Laborum enim quasi at modi</li>
-              <li>Ad at tempore</li>
-            </ul>
-
-
-            <div class="author-box">
-              <div class="d-flex mb-4">
-                <div class="mr-3">
-                  <img src="images/person_4.jpg" alt="Image" class="img-fluid rounded-circle">
-                </div>
-                <div class="mr-auto text-black">
-                  <strong class="font-weight-bold mb-0">Darren K.</strong> <br>
-                  Co-Founder, XYZ Inc.
-                </div>
-              </div>
-              <blockquote>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus vitae ipsa asperiores inventore aperiam iure?&rdquo;</blockquote>
+              <blockquote>&ldquo;The TrackPod is exactly what I need when I'm taking group photos on the fly. The portability ease of use of the product lets me focus on capturing valuable moments with my friends and family.&rdquo;</blockquote>
             </div>
           </div>
         </div>
