remove social media icons

--- a/index.html
+++ b/index.html
@@ -260,14 +260,14 @@
                 <div>
                   <h3 class="mb-2">Devansh Vaid</h3>
                   <span class="position mb-4">Embedded Systems Designer</span>
-                  <div class="faded">
+                  <!-- <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -281,14 +281,14 @@
                 <div>
                   <h3 class="mb-2">Fernando Yee</h3>
                   <span class="position mb-4">Electromechanical Designer</span>
-                  <div class="faded">
+                  <!-- <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -302,14 +302,14 @@
                 <div>
                   <h3 class="mb-2">Julian Pettit</h3>
                   <span class="position mb-4">AI/ML and CV developer</span>
-                  <div class="faded">
+                  <!-- <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
@@ -323,14 +323,14 @@
                 <div>
                   <h3 class="mb-2">William Klanac</h3>
                   <span class="position mb-4" style="height: 54px;">Mechanical Designer</span>
-                  <div class="faded">
+                  <!-- <div class="faded">
                     <ul class="ftco-social text-center">
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-twitter"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-facebook"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-linkedin"></span></a></li>
                       <li class="ftco-animate fadeInUp ftco-animated"><a href="#"><span class="icon-instagram"></span></a></li>
                     </ul>
-                  </div>
+                  </div> -->
                 </div>
               </div>
             </div>
