--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         </div>
         <div class="row mb-5">
           <div class="col-lg-6">
-            <img src="images/about_1.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
+            <img src="images/group_photo.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
             <h2 class="text-black mb-4">Meet The Team</h2>
@@ -446,7 +446,7 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h2 class="section-title mb-3">Blog Posts</h2>
+            <h2 class="section-title mb-3">Project Updates</h2>
           </div>
         </div>
 
@@ -483,7 +483,7 @@
       </div>
     </div>
 
-    <div class="site-section bg-light" id="contact-section">
+   <!--  <div class="site-section bg-light" id="contact-section">
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
@@ -546,7 +546,7 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     <div class="footer py-5 border-top text-center">
       <div class="container">
