--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
           <div class="col-md-12" style="position: relative;" data-aos="fade-up">
 
-            <img src="images/landing_1.png" alt="Image" class="img-fluid img-absolute">
+            <img src="images/3_cartoon_tripod.jpg" alt="Image" class="img-fluid img-absolute" height=350>
 
             <div class="row mb-4">
               <div class="col-lg-4 mr-auto">
@@ -242,7 +242,7 @@
           <div class="col-lg-5 ml-auto pl-lg-5">
             <h2 class="text-black mb-4">Meet The Team</h2>
             <p class="mb-4">We are a group of 4th year mechatronics students at the University of Waterloo. We have a wide range of industry experience in fields such as manufacturing and automation, software for augmented reality, and embedded software. </p>
-            <p><a href="#" class="btn btn-primary">Learn More</a></p>
+            <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
           </div>
         </div>
 
@@ -518,7 +518,7 @@
         </div>
 
       </div>
-    </div> -->
+    </div> 
 
     <div class="footer py-5 border-top text-center">
       <div class="container">
@@ -533,7 +533,7 @@
         </div>
         <div class="row">
           <div class="col-md-12">
-            <p class="mb-0">
+            <p class="mb-0"> -->
 
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0.
               Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank" >Colorlib</a>
