--- a/index.html
+++ b/index.html
@@ -232,15 +232,15 @@
       <div class="container">
         <div class="row mb-5">
           <div class="col-12 text-center">
-            <h2 class="section-title mb-3">About Us</h2>
+            <h2 class="section-title mb-3">Meet the Team</h2>
           </div>
         </div>
         <div class="row mb-5">
           <div class="col-lg-6">
-            <img src="images/group_photo.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
+            <!-- <img src="images/group_photo.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow"> -->
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
-            <h2 class="text-black mb-4">Meet The Team</h2>
+            <!-- <h2 class="text-black mb-4">Meet The Team</h2> -->
             <p class="mb-4">We are a group of 4th year mechatronics students at the University of Waterloo. We have a wide range of industry experience in fields such as manufacturing and automation, software for augmented reality, and embedded software. </p>
             <!-- <p><a href="#" class="btn btn-primary">Learn More</a></p> -->
           </div>
@@ -426,16 +426,16 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/img_1.jpg" alt="Image" class="img-fluid">
-              <h2><a href="#">Create interactive prototypes</a></h2>
-              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
+              <h2><a href="#">Update 1</a></h2>
+              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 16, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <p>The pitch and yaw brackets were 3D printed and a test fixture was made to help increase developing speed.</p>
               <p><a href="#">Continue Reading...</a></p>
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/img_2.jpg" alt="Image" class="img-fluid">
-              <h2><a href="#">Create interactive prototypes</a></h2>
+              <h2><a href="#">Update 2</a></h2>
               <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
               <p><a href="#">Continue Reading...</a></p>
@@ -444,7 +444,7 @@
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/img_3.jpg" alt="Image" class="img-fluid">
-              <h2><a href="#">Create interactive prototypes</a></h2>
+              <h2><a href="#">Update 3</a></h2>
               <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
               <p><a href="#">Continue Reading...</a></p>
