--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
         <div class="row mb-5">
           <div class="col-lg-6">
-            <!-- <img src="images/group_photo.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow"> -->
+            <img src="images/group_photo.jpg" alt="Image" class="img-fluid mb-5 mb-lg-0 rounded shadow">
           </div>
           <div class="col-lg-5 ml-auto pl-lg-5">
             <!-- <h2 class="text-black mb-4">Meet The Team</h2> -->
