added picture of test fixture and updated html file to include image

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/img_1.jpg" alt="Image" class="img-fluid">
+              <img src="images/update1_test_fixture.png" alt="Image" class="img-fluid">
               <h2><a href="#">Update 1</a></h2>
               <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 16, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
               <p>The pitch and yaw brackets were 3D printed and a test fixture was made to help increase developing speed.</p>
