--- a/index.html
+++ b/index.html
@@ -425,11 +425,11 @@
         <div class="row">
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/update1_test_fixture.png" alt="Image" class="img-fluid">
+              <img src="images/update1_test_fixture.PNG" alt="Image" class="img-fluid">
               <h2><a href="#">Update 1</a></h2>
-              <div class="meta mb-4">Ham Brook <span class="mx-2">&bullet;</span> Jan 16, 2020<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <div class="meta mb-4"><span class="mx-2"></span> Jan 16, 2020<span class="mx-2"></span></div>
               <p>The pitch and yaw brackets were 3D printed and a test fixture was made to help increase developing speed.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
@@ -438,7 +438,7 @@
               <h2><a href="#">Update 2</a></h2>
               <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
@@ -447,7 +447,7 @@
               <h2><a href="#">Update 3</a></h2>
               <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
-              <p><a href="#">Continue Reading...</a></p>
+              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
 
