--- a/index.html
+++ b/index.html
@@ -434,10 +434,10 @@
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/img_2.jpg" alt="Image" class="img-fluid">
+              <img src="images/update2.jpg" alt="Image" class="img-fluid">
               <h2><a href="#">Update 2</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
+              <div class="meta mb-4"><span class="mx-2">&bullet;</span> Jan 28, 2020<span class="mx-2">&bullet;</span></div>
+              <p>The battery pack was made and voltage tests were done with the BMS and buck converter. Some more development was made with the embedded controller and HTTP tests were done on an Android app.</p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
@@ -445,7 +445,7 @@
             <div class="h-entry">
               <img src="images/img_3.jpg" alt="Image" class="img-fluid">
               <h2><a href="#">Update 3</a></h2>
-              <div class="meta mb-4">James Phelps <span class="mx-2">&bullet;</span> Jan 18, 2019<span class="mx-2">&bullet;</span> <a href="#">News</a></div>
+              <div class="meta mb-4">J<span class="mx-2">&bullet;</span> Jan 18, 2020<span class="mx-2">&bullet;</span></div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
