--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
               <img src="images/update1_test_fixture.PNG" alt="Image" class="img-fluid">
               <h2><a href="#">Update 1</a></h2>
               <div class="meta mb-4"><span class="mx-2"></span> Jan 16, 2020<span class="mx-2"></span></div>
-              <p>The pitch and yaw brackets were 3D printed and a test fixture was made to help increase developing speed.</p>
+              <p>The pitch and yaw brackets were 3D printed and a test fixture was made to help increase developing speed. All the 3D printed parts use high quality PLA filament for strength and robustness.</p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
@@ -436,17 +436,19 @@
             <div class="h-entry">
               <img src="images/update2.jpg" alt="Image" class="img-fluid">
               <h2><a href="#">Update 2</a></h2>
-              <div class="meta mb-4"><span class="mx-2">&bullet;</span> Jan 28, 2020<span class="mx-2">&bullet;</span></div>
+              <div class="meta mb-4"><span class="mx-2">&bullet;</span> Jan 24, 2020<span class="mx-2">&bullet;</span></div>
               <p>The battery pack was made and voltage tests were done with the BMS and buck converter. Some more development was made with the embedded controller and HTTP tests were done on an Android app.</p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
-              <img src="images/img_3.jpg" alt="Image" class="img-fluid">
+              <img src="images/http.png" alt="Image" class="img-fluid">
               <h2><a href="#">Update 3</a></h2>
-              <div class="meta mb-4">J<span class="mx-2">&bullet;</span> Jan 18, 2020<span class="mx-2">&bullet;</span></div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eligendi nobis ea maiores sapiente veritatis reprehenderit suscipit quaerat rerum voluptatibus a eius.</p>
+              <div class="meta mb-4">J<span class="mx-2">&bullet;</span> Jan 28, 2020<span class="mx-2">&bullet;</span></div>
+              <p>The HTTP request tests were run with the system. A demonstrative video was taken to capture the servo movements being controlled wirelessly via the Android app. Next steps at this point are delving
+                 deeper into the computer vision functionality of the app and performing tests with the batteries and a mounted phone. The HTTP test video can be seen <a href="https://youtu.be/JOOR6loPFPQ">here</a>.
+              </p>
               <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
@@ -518,7 +520,7 @@
         </div>
 
       </div>
-    </div> 
+    </div>
 
     <div class="footer py-5 border-top text-center">
       <div class="container">
