add blog post updates

--- a/index.html
+++ b/index.html
@@ -429,30 +429,56 @@
               <h2><a href="#">Update 1</a></h2>
               <div class="meta mb-4"><span class="mx-2"></span> Jan 16, 2020<span class="mx-2"></span></div>
               <p>The pitch and yaw brackets were 3D printed and a test fixture was made to help increase developing speed. All the 3D printed parts use high quality PLA filament for strength and robustness.</p>
-              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/update2.jpg" alt="Image" class="img-fluid">
               <h2><a href="#">Update 2</a></h2>
-              <div class="meta mb-4"><span class="mx-2">&bullet;</span> Jan 24, 2020<span class="mx-2">&bullet;</span></div>
+              <div class="meta mb-4"><span class="mx-2"></span> Jan 24, 2020<span class="mx-2">&bullet;</span></div>
               <p>The battery pack was made and voltage tests were done with the BMS and buck converter. Some more development was made with the embedded controller and HTTP tests were done on an Android app.</p>
-              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
           <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
             <div class="h-entry">
               <img src="images/http.png" alt="Image" class="img-fluid">
               <h2><a href="#">Update 3</a></h2>
-              <div class="meta mb-4">J<span class="mx-2">&bullet;</span> Jan 28, 2020<span class="mx-2">&bullet;</span></div>
+              <div class="meta mb-4"><span class="mx-2"></span> Jan 28, 2020<span class="mx-2">&bullet;</span></div>
               <p>The HTTP request tests were run with the system. A demonstrative video was taken to capture the servo movements being controlled wirelessly via the Android app. Next steps at this point are delving
                  deeper into the computer vision functionality of the app and performing tests with the batteries and a mounted phone. The HTTP test video can be seen <a href="https://youtu.be/JOOR6loPFPQ">here</a>.
               </p>
-              <!-- <p><a href="#">Continue Reading...</a></p> -->
             </div>
           </div>
 
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_4.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 4</a></h2>
+              <div class="meta mb-4"><span class="mx-2"></span> Feb 5, 2020<span class="mx-2">&bullet;</span></div>
+              <p>Initial testing was performed on the Android app. The app uses machine learning facial recognition techniques to match detected faces with the closest matching candidate based on downloaded classifiers.
+                 In the future, classifiers for the group members will be extended and functionality will be added to support in-app training.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_5.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 5</a></h2>
+              <div class="meta mb-4"><span class="mx-2"></span> Feb 18, 2020<span class="mx-2">&bullet;</span></div>
+              <p>Analytics were added via a debug option in the application. This improves the testing process and exposes more information on the screen, allowing the operator to troubleshoot issues
+                 and see how the classification decision is being made.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_6.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 6</a></h2>
+              <div class="meta mb-4"><span class="mx-2"></span> Feb 21, 2020<span class="mx-2">&bullet;</span></div>
+              <p>The mobile application now supports in-app classifier training. Users can import pictures of the subject to add them as a custom target.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
