--- a/index.html
+++ b/index.html
@@ -478,6 +478,24 @@
               </p>
             </div>
           </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_7.jpg" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 7 Pt. 1</a></h2>
+              <div class="meta mb-4">Feb 26, 2020</div>
+              <p>Completed the connectivity between the mobile application and the ESP32 microcontroller. As in the HTTP testing, requests are used to move the mount to a target position based on the positional info in the camera frame.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_8.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 7 Pt. 2</a></h2>
+              <div class="meta mb-4">Feb 26, 2020</div>
+              <p>Calibrated the new glass build plate on the 3D printer, which was purchased to improve build consistency prior to the final print of the TrackPod chassis.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
