--- a/index.html
+++ b/index.html
@@ -496,6 +496,15 @@
               </p>
             </div>
           </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_9.png" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 8</a></h2>
+              <div class="meta mb-4">Feb 28, 2020</div>
+              <p>Integration of the electrical, mechanical, and software systems was tested. Video of the combined system after troubleshooting can be seen <a href="https://www.youtube.com/watch?v=4s7I_F5OUus">here</a>.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
