--- a/index.html
+++ b/index.html
@@ -505,6 +505,16 @@
               </p>
             </div>
           </div>
+          <div class="col-md-6 col-lg-4 mb-4 mb-lg-4">
+            <div class="h-entry">
+              <img src="images/blog_10.jpg" alt="Image" class="img-fluid">
+              <h2><a href="#">Update 9</a></h2>
+              <div class="meta mb-4">Mar 1, 2020</div>
+              <p>Completed the chassis base design and began 3D printing. The electronics were mounted in the middle chassis section and connected with the servos on the top. Updates to the image capture sections of the code were implemented.
+                 Functionality was added to include the tilt axis in the tracking motion.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
